# traffic-sign-classification

./: .gitignore  README.md  crossval.py  evaluate.py  logger.py  pyproject.toml  train.py  viz.py
dataio/: __init__.py  dataloader.py  gtsrb_dataset.py  gtsrb_download.py  transforms.py
nn/: __init__.py  activations.py  checks.py  layers.py  loss.py  model.py  optim.py  sched.py  tensor.py  utils.py
nn/layers/: __init__.py  activation.py  base_layer.py  base_layers.py  batchnorm2d.py  concat.py  conv2d.py  dropout.py  flatten.py  globalavgpool2d.py  linear.py  maxpool2d.py  sequential.py
notebooks/: eda.ipynb  nature.ipynb  nature_hyperparam_search.ipynb  nature_torch.ipynb  testing.ipynb
tex/: references.bib  report.tex
