[project]
name = "traffic-sign-classification"
version = "1.0.0"
description = "German Traffic Street Sign Classification project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "numpy",
    "pillow",
    "logging>=0.4.9.6",
    "typing>=3.10.0.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "ipykernel",
    "tqdm",
    "black",
    "black[jupyter]",
]
